IVYPORTAL-7975: Responsive Task list - Fix js can't load on IE

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -531,7 +531,7 @@ body .ui-selectcheckboxmenu-panel .ui-selectcheckboxmenu-header .ui-selectcheckb
   margin-top: 1px;
 }
 
-.compact-task-widget .task-widget-sub-header {
+.task-widget-sub-header {
   width: 100%;
 }
 
